* 2.1.0 support all PHP versions until 5.3.8

.Additions and changes:
* add a new report (condition) for CLI tool that will replace the warning messages
on conditional code uses
* removed warning messages about conditional code uses; replaced by
the new --report condition of the CLI tool
* add a new level for conditional code uses about traits (PHP 5.4 feature)

.Bug fixes:
* none


== Version 2.6.0 (2012-07-26)

.Versions summary:
* 2.6.0 support all PHP versions until 5.4.5
* 2.5.0 support all PHP versions until 5.4.4
* 2.4.0 support all PHP versions until 5.4.3
* 2.3.0 support all PHP versions until 5.4.0
* 2.2.0 support all PHP versions until 5.3.10
* 2.1.0 support all PHP versions until 5.3.8

.Additions and changes since 2.6.0RC1:
* fixed plural in the footer of all reports produced by CLI
* add namespace (when necessary) in XML report
* improved version detection of namespaces aliases uses in type hinting

.Additions and changes since 2.5.0:
* Users have now ability to use their own autoloader (related to issue GH-43)

.Bug fixes since 2.6.0RC1:
* fix references to latest version of branch PHP 5.3
* wrong namespace used for class when importing other namespaces (see PHP_Reflect 1.4.2)
* excludes callable type hint in additionnal class search

.Bug fixes since 2.5.0:
* GH-34 : Remove false positive on A::CONST_NAME
* GH-38 : type hinting in function prototype
* GH-39 : class not detected and bad version
* GH-40 : ambiguous class report
* GH-42 : Remove parameter versions from scandir()
* unit tests suites PHP 5.2 compatibility with source only parsable with PHP 5.3 or greater


== Version 2.6.0 RC1 (2012-07-23)

.Additions and changes:
* Users have now ability to use their own autoloader (related to issue GH-43)

.Bug fixes:
* GH-34 : Remove false positive on A::CONST_NAME
* GH-38 : type hinting in function prototype
* GH-39 : class not detected and bad version
* GH-40 : ambiguous class report
* GH-42 : Remove parameter versions from scandir()